Stable v3 with google fit working perfectly(only for test users).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name= "app_name">SlitherSync</string>
+    <string name="app_name">SlitherSync</string>
+    <!-- IMPORTANT: Replace with your own OpenWeatherMap API key -->
+    <string name="openweathermap_api_key">YOUR_API_KEY</string>
 </resources>
