--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">SlitherSync</string>
     <!-- IMPORTANT: Replace with your own OpenWeatherMap API key -->
-    <string name="openweathermap_api_key">YOUR_API_KEY</string>
+    <string name="openweathermap_api_key">e05c2fe70f742bdc52fc7d6b759ef58d</string>
 </resources>
